--- a/views/about.ejs
+++ b/views/about.ejs
@@ -43,8 +43,8 @@
 				</p>
 				<p>
           <button type="button" class="btn btn-dark"><a class="nav-link" href="https://www.linkedin.com/in/richard-shelton-2b1707159/">LinkedIn</a></button>
-          <button type="button" class="btn btn-dark"><a class="nav-link" href="https://www.instagram.com/steadyskelton/">Instagram</a></button>
-          <button type="button" class="btn btn-dark"><a class="nav-link" href="#">GitHub</a></button>
+          <button type="button" class="btn btn-dark"><a class="nav-link" href="https://twitter.com/reddieshelton">Twitter</a></button>
+          <button type="button" class="btn btn-dark"><a class="nav-link" href="https://github.com/rslol">GitHub</a></button>
 				</p>
 			</div>
 		</footer>
