--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,58 +6,53 @@
     <p class="lead">Projects in Chronological Order</p>
   </div>
 <!--this is the start the project section of the website-->  
-  <div class="container" id="one">
-    <div class="col-md-4 square1">
-      <p>Languages Used:<br>HTML/CSS/JS</p>
-      <img src="#" alt="#" class="img-thumbnail"></img>
-        <div class="overlay">
-          <a href="#"><div class="text">The Great Color Guessing Game</div></a>
+  <div class="container">
+    <div class="row">
+      <div class="thumbnail" id="one">
+        <div class="container">
+          <img src="/images/blogApp.png">
+          <span>Personal Blog Site: Featuring HTML/CSS/JS/Node.js/Express.js/MongoDB
+            <br>
+            <button class="ui inverted button blue">
+              <a href="#">Blog App</a>
+            </button>
+          </span>
         </div>
-    </div>
-    <div class="col-md-4 square1">
-      <p>Languages Used:<br>HTML/CSS/JS</p>
-      <img src="#" alt="#" class="img-thumbnail"></img>
-        <div class="overlay">
-            <a href="#"><div class="text">To-Do List</div></a>
+      </div>
+      <div class="thumbnail" id="two">
+        <div class="container">
+          <img src="/images/singlePage.png">
+          <span>Single-Page Portfolio Site: Featuring HTML/CSS/JS<br>
+            <button class="ui inverted button blue">
+              <a href="#">Single-Page Portfolio</a>
+            </button>
+          </span>
         </div>
-    </div>
-    <div class="col-md-4 square1">
-      <p>Languages Used:<br>HTML/CSS/JS/Node.js/ExpressJS/MongoDB</p>
-      <img src="#" alt="#" class="img-thumbnail"></img>
-        <div class="overlay">
-          <a href="#"><div class="text">My blog site featuring Semantic UI</div></a>
+      </div>
+      <div class="thumbnail" id="three">
+        <div class="container">
+          <img src="/images/wordPress.png">
+          <span>WordPress Portfolio Site: Featuring HTML/CSS/Wordpress Plugins
+            <br>
+            <button class="ui inverted button blue">
+              <a href="#">WordPress Portfolio</a>
+            </button>
+          </span>
         </div>
-    </div>
-  </div>
-  <div class="container" id="two">
-    <div class="col-md-6 square2">
-      <p>Languages Used:<br>HTML/CSS/PHP/MySQL</p>
-      <img src="#" alt="#" class="img-thumbnail"></img>
-        <div class="overlay">
-          <a href="#"><div class="text">My largest project: The Spotify Clone! (Under Construction)</div></a>
+      </div>
+      <div class="thumbnail" id="four">
+        <div class="container">
+          <img src="/images/colorGame.jpg">
+          <span>Color Game: Featuring HTML/CSS/JS. JS Heavy Project
+            <br>
+            <button class="ui inverted button blue">
+              <a href="https://codepen.io/richardshelton13/full/PExqpb/">Color Game</a>
+            </button>
+          </span>
         </div>
+      </div>
     </div>
-    <div class="col-md-6 square2">
-      <p>Languages Used:<br>PHP/CSS/Wordpress</p>
-      <img src="#" alt="#" class="img-thumbnail"></img>
-        <div class="overlay">
-          <a href="#"><div class="text">Salvaje: Vegan Latin Food Truck (Under Construction)</div></a>
-        </div>
-    </div>
-    <p class="blurb">Created by Richard Shelton</p>
-    <footer class="mastfoot mt-auto">
-      <p>
-        <button type="button" class="btn btn-dark"><a class="nav-link" href="https://www.linkedin.com/in/richard-shelton-2b1707159/">LinkedIn</a></button>
-        <button type="button" class="btn btn-dark"><a class="nav-link" href="https://www.instagram.com/steadyskelton/">Instagram</a>         </button>
-        <button type="button" class="btn btn-dark"><a class="nav-link" href="#">GitHub</a></button>
-      </p>
-    </footer>
   </div>
 </main>
-
-
-
-
-
 
 <% include ./partials/footer %>
