--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,12 +5,13 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/landing.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body class="text-cover">
 	<div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
 		<header class="masthead mb-auto">
 			<div class="inner">
-				<h3 class="masthead-brand"><span class="oi oi-pulse"></span>
+				<h3 class="masthead-brand">Richard Shelton</span>
 					<nav class="nav nav-masthead justify-content-center float-right">
 						<a class="nav-link active" href="/landing" method="GET">Home</a>
 						<a class="nav-link" href="/contact" method="GET">Contact</a>
