--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -3,6 +3,29 @@ body {
 	color: white;	
 }
 
+header {
+	animation: 2s slidefade 0.05s forwards;
+	opacity: 0; 
+}
+
+@keyframes slidefade {
+	100%  {
+		opacity: 1;
+	}
+}
+
+main {
+	animation: 3.5s fadein 1s forwards;
+	opacity: 0;
+}
+
+@keyframes fadein {
+	100% {
+		opacity: 1;
+	}
+}
+
+
 .btn {
 	background-color: black;
 }
@@ -19,3 +42,27 @@ h1, p {
 	padding: 15% 10%;
 }
 
+footer {
+	opacity: 0.5;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	background-color: black;
+	padding: 20px;
+	color: white;
+}
+
+footer ul {
+	display: flex;
+	list-style: none;
+}
+
+footer ul li {
+	margin-left: 16px;
+}
+
+footer p {
+	text-transform: uppercase;
+	font-size: 14px;
+	align-self: center;
+}
