--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,16 @@
-      
-      
-    </div>
+    <footer class="mastfoot mt-auto">
+      <p>Created by Richard Shelton</p>
+      <ul>
+        <li>Phone Number: 904-322-3770</li>
+        <li>Email Address: richard.shelton567@gmail.com</li>
+      </ul>
+      <ul>
+        <li><a href="https://twitter.com/reddieshelton"><i class="fa fa-twitter-square fa-2x"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/richard-shelton-2b1707159/"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+        <li><a href="https://github.com/rslol"><i class="fa fa-github-square fa-2x"></i></a></li>
+      </ul>
+    </footer>
   </body>
-</html>
+</html>    
+   
+  
