--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,52 +7,55 @@
   </div>
 <!--this is the start the project section of the website-->  
   <div class="container">
-    <div class="row">
-      <div class="thumbnail" id="one">
-        <div class="container">
-          <img src="/images/blogApp.png">
-          <span>Personal Blog Site: Featuring HTML/CSS/JS/Node.js/Express.js/MongoDB
-            <br>
-            <button class="ui inverted button blue">
-              <a href="#">Blog App</a>
-            </button>
-          </span>
-        </div>
+    <div class="thumbnail" id="one">
+      <div>
+        <img src="/images/blogApp.png">
       </div>
-      <div class="thumbnail" id="two">
-        <div class="container">
-          <img src="/images/singlePage.png">
-          <span>Single-Page Portfolio Site: Featuring HTML/CSS/JS<br>
-            <button class="ui inverted button blue">
-              <a href="#">Single-Page Portfolio</a>
-            </button>
-          </span>
-        </div>
+      <div>Personal Blog Site: HTML/CSS/JS/Node.js/Express.js/MongoDB
+        <br>
+        <button class="ui inverted button black">
+          <a href="http://www.richardsheltonblog.com">Blog App</a>
+        </button>
       </div>
-      <div class="thumbnail" id="three">
-        <div class="container">
-          <img src="/images/wordPress.png">
-          <span>WordPress Portfolio Site: Featuring HTML/CSS/Wordpress Plugins
-            <br>
-            <button class="ui inverted button blue">
-              <a href="#">WordPress Portfolio</a>
-            </button>
-          </span>
-        </div>
+    </div>
+    
+    <div class="thumbnail" id="two">
+      <div>
+        <img src="/images/singlePage.png">
       </div>
-      <div class="thumbnail" id="four">
-        <div class="container">
-          <img src="/images/colorGame.jpg">
-          <span>Color Game: Featuring HTML/CSS/JS. JS Heavy Project
-            <br>
-            <button class="ui inverted button blue">
-              <a href="https://codepen.io/richardshelton13/full/PExqpb/">Color Game</a>
-            </button>
-          </span>
-        </div>
+      <div>Single-Page Portfolio Site: HTML/CSS/JS<br>
+        <button class="ui inverted button black">
+          <a href="#">Single-Page Portfolio</a>
+        </button>
+      </div>
+    </div>
+      
+    <div class="thumbnail" id="three">
+      <div>
+        <img src="/images/wordPress.png">
+      </div>
+      <div>WordPress Portfolio Site: HTML/CSS/Wordpress Plugins
+        <br>
+        <button class="ui inverted button black">
+          <a href="#">WordPress Portfolio</a>
+        </button>
+      </div>
+    </div>
+
+    <div class="thumbnail" id="four">
+      <div>
+        <img src="/images/colorGame.jpg">
+      </div>
+      <div>Color Game: HTML/CSS/JS
+        <br>
+        <button class="ui inverted button black">
+          <a href="https://codepen.io/richardshelton13/full/PExqpb/">Color Game</a>
+        </button>
       </div>
     </div>
   </div>
-</main>
+</main>    
+      
 
-<% include ./partials/footer %>
+<% include ./partials/footer %>  
+  
