--- a/views/partials/header3.ejs
+++ b/views/partials/header3.ejs
@@ -5,6 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/contact.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/components/button.min.css">
+	
+	
 </head>
 <body class="text-cover">
 	<nav class="navbar navbar-expand-lg navbar-inverse bg-inverse">
