--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
       <div>Personal Blog Site: HTML/CSS/JS/Node.js/Express.js/MongoDB
         <br>
         <button class="ui inverted button black">
-          <a href="http://www.richardsheltonblog.com">Blog App</a>
+          <a href="http://www.richardsheltonblog.com" target="_blank">Blog App</a>
         </button>
       </div>
     </div>
@@ -49,7 +49,7 @@
       <div>Color Game: HTML/CSS/JS
         <br>
         <button class="ui inverted button black">
-          <a href="https://codepen.io/richardshelton13/full/PExqpb/">Color Game</a>
+          <a href="https://codepen.io/richardshelton13/full/PExqpb/" target="_blank">Color Game</a>
         </button>
       </div>
     </div>
