--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,10 +1,15 @@
 <% include ./partials/header %>
-<main role="main" class="inner cover">
-	<h1 class="cover-heading">Welcome to my Portfolio</h1>
-	<p class="lead">Where Healthcare Experience combines with Full-Stack Web Developement</p>
-	<p class="lead">
-		<a href="/index" method="GET" class="btn bt-lg btn-secondary">See My Projects</a>
-	</p>
-</main>
-
+<section>
+	<div class="masthead segment bg5">
+		<div class="ui container">
+			<div class="ui inverted header" id="intro">
+				<h1>Welcome to my Portfolio</h1>
+				<p>Where Healthcare Experience combines with Full-Stack Web Development</p>
+				<p>
+					<a href="/index" method="GET" class="ui huge inverted download button">My Projects</a>
+				</p>
+			</div>
+		</div>
+	</div>
+</section>
 <% include ./partials/footer %>
