--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,14 +1,42 @@
-    <footer class="mastfoot mt-auto">
-      <p>Created by Richard Shelton</p>
-      <ul>
-        <li>Phone Number: 904-322-3770</li>
-        <li>Email Address: richard.shelton567@gmail.com</li>
-      </ul>
-      <ul>
-        <li><a href="https://twitter.com/reddieshelton"><i class="fa fa-twitter-square fa-2x"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/richard-shelton-2b1707159/"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
-        <li><a href="https://github.com/rslol"><i class="fa fa-github-square fa-2x"></i></a></li>
-      </ul>
+    <footer class="ui inverted vertical footer segment">
+      <div class="ui center alinged container">
+        <div class="ui stackable inverted divided grid">
+          <div class="three wide column">
+            <p>Created by Richard Shelton</p>
+          </div>
+          <div class="three wide column">
+            <ul>
+              <li class="ui inverted header">Phone Number</li>
+              <li>904-322-3770</li>
+            </ul>
+          </div>
+          <div class="five wide column">
+            <ul>
+              <li class="ui inverted header">Email<br>Address</li>
+              <li>richard.shelton567@gmail.com</li>
+            </ul>
+          </div>
+          <div class="five wide column">
+            <ul>
+              <li>
+                <a href="https://twitter.com/reddieshelton" target="_blank">
+                  <i class="fa fa-twitter-square fa-2x"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/in/richard-shelton-2b1707159/" target="_blank">
+                  <i class="fa fa-linkedin-square fa-2x"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/rslol" target="_blank">
+                  <i class="fa fa-github-square fa-2x"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>    
