--- a/public/stylesheets/contact.css
+++ b/public/stylesheets/contact.css
@@ -1,154 +1,99 @@
-body {
-    background-color: black;
-    color: white;
-    padding: 0;
+* {
     margin: 0;
-    animation: 2s slidefade 1s forwards;
-    opacity: 0;
+    padding: 0;
 }
 
-@keyframes slidefade {
-    100% {
-        opacity: 1;
-    }
+body {
+    background-color: #003b46 !important;
+}
+
+#head {
+  background-color: #003b46;
+  animation: 2s slidefade 1s forwards;
+  opacity: 0;
 }
 
 a {
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 10px;
+    color: white !important;
+    margin-right: 10px;
+}
+
+.outline:hover {
+	background-color: #66a5ad;
+	color: white;
+}
+
+.ui.container {
+    text-align: center;
+}
+
+#intro {
+    padding-top: 10%;
+    padding-bottom: 10%;
+}
+
+#contact {
+    padding-top: 8%;
     color: white;
 }
 
-h1 {
-    text-align: center;
-    padding-bottom: 4%;
+.white {
+    color: white !important;
+}
+
+.ui.button {
+    margin-top: 20px;
+    background-color: #003b46;
+    color: white;
+    border: 2px solid white;
+}
+
+.ui.button:hover {
+    background-color: #66a5ad;
+    color: white !important;
+    border: 2px solid white;
+}
+
+@keyframes slidefade {
+  100% {
+    opacity: 1;
+  }
 }
 
 footer {
-    opacity: 0.5;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    background-color: black;
-    padding: 20px;
-    color: white;
+	position: fixed;
+	height: 60px;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	background-color: #003B46 !important;
+	padding: 20px;
+	color: white;
+  opacity: 1.0;
 }
 
 footer ul {
 	display: flex;
 	list-style: none;
+	margin-bottom: 0;
 }
 
 footer ul li {
 	margin-left: 16px;
+	margin-bottom: 0;
 }
 
 footer p {
-    text-transform: uppercase;
-    font-size: 14px;
-    align-self: center;
+	text-transform: uppercase;
+	font-size: 14px;
+	align-self: center;
+	margin: 0;
 }
 
-.container {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    text-align: center;
-    grid-gap: 1em;
-}
-
-ul, ol {
-    list-style: none;
-}
-
-.jumbotron {
-    background-color: black;
-    text-align: center;
-}
-
-
-.form-style-2{
-    /* display: grid;
-    align-content: center;
-    grid-template-columns: 100%;
-    max-width: 500px;
-    padding: 20px 12px 10px 20px; */
-    font: 13px Arial, Helvetica, sans-serif;
-    margin-top: 8%;
-    text-align: center;
-}
-
-
-
-
-.form-style-2-heading{
-    font-weight: bold;
-    font-style: italic;
-    border-bottom: 2px solid #ddd;
-    margin-bottom: 20px;
-    font-size: 15px;
-    padding-bottom: 3px;
-}
-.form-style-2 label{
-    display: block;
-    margin: 0px 0px 15px 0px;
-}
-.form-style-2 label > span{
-    width: 100px;
-    font-weight: bold;
-    float: left;
-    padding-top: 8px;
-    padding-right: 5px;
-}
-.form-style-2 span.required{
-    color:red;
-}
-.form-style-2 .tel-number-field{
-    width: 40px;
-    text-align: center;
-}
-.form-style-2 input.input-field, .form-style-2 .select-field{
-    width: 48%; 
-}
-.form-style-2 input.input-field, 
-.form-style-2 .tel-number-field, 
-.form-style-2 .textarea-field, 
- .form-style-2 .select-field{
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    border: 1px solid #C2C2C2;
-    box-shadow: 1px 1px 4px #EBEBEB;
-    -moz-box-shadow: 1px 1px 4px #EBEBEB;
-    -webkit-box-shadow: 1px 1px 4px #EBEBEB;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    padding: 7px;
-    outline: none;
-}
-.form-style-2 .input-field:focus, 
-.form-style-2 .tel-number-field:focus, 
-.form-style-2 .textarea-field:focus,  
-.form-style-2 .select-field:focus{
-    border: 1px solid #0C0;
-}
-.form-style-2 .textarea-field{
-    height:100px;
-    width: 55%;
-}
-.form-style-2 input[type=submit],
-.form-style-2 input[type=button]{
-    border: none;
-    padding: 8px 15px 8px 15px;
-    background: black;
-    color: #fff;
-    box-shadow: 1px 1px 4px #DADADA;
-    -moz-box-shadow: 1px 1px 4px #DADADA;
-    -webkit-box-shadow: 1px 1px 4px #DADADA;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-}
-.form-style-2 input[type=submit]:hover,
-.form-style-2 input[type=button]:hover{
-    background:black;
-    color: #fff;
+.ui.stackable.inverted.divided.grid {
+  margin-top: 30%;
+  padding-top: 30%;
 }
