--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,39 +1,48 @@
 <% include ./partials/header2 %>
 
 <main role="main" class="inner cover">
-  <div class="jumbotron">
-    <h1 class="cover-header">About Me</h1>
-    <p class="lead">Who I am and how I got here</p>
+  <div class="ui container">
+    <div class="ui inverted header" id="intro">
+      <h1>About Me</h1>
+    </div>
   </div>
-  <div class="container">
-    <ul>
-      <li>Born in Jacksonville, FL in Feburary 1993</li>
-      <li>Played baseball from 5 to 12 years old</li>
-      <li>Started playing tennis at 10, still plays to this day</li>
-      <li>Played high school tennis for Trinity Christian Academy, went to states 3 times, lead the team to a 3rd place finish</li>
-      <li>Played college tennis for Florida Institute of Technology, played 4 singles and 2 doubles</li>
-      <li>After a year, I realized that a) I'm bad at physics and b) I didn't want to be a mechanical engineer</li>
-      <li>Small fact, I've been a student at 4 different colleges (FSCJ, FIT, Flagler, UCF) and changed my major numerous times</li>
-      <li>This all bit me in the butt, and in 2013 had to stop attending UCF because I had no way to pay for it</li>
-      <li>Moved back home and hit a low point. Became a CNA and worked at an assisted living in 2015.</li>
-      <li>Got a job at Florida Hospital and moved back to Orlando</li>
-      <li>In 2017, got accepted into UCF Health Service Administration program</li>
-      <li>Started learning how to code in the Fall of '17</li>
-      <li>Now I'm showing off what I learned with a personal site</li>
-    </ul>
-    <h2>Technologies<br>Used</h2>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-      <li>Node.js</li>
-      <li>Express.js</li>
-      <li>MongoDB</li>
-    </ul>
-    <h2>Frameworks I'm learning</h2>
-    <ul>
-      <li>React</li>
-    </ul>
+  <div class="ui container">
+    <div class="ui raised segment">
+      <h2 class="ui header">Who I am as a person, and how I got here</h2>
+      <ul>
+        <li>Born in Jacksonville, FL in Feburary 1993</li>
+        <li>Played baseball from 5 to 12 years old</li>
+        <li>Started playing tennis at 10, still plays to this day</li>
+        <li>Played high school tennis for Trinity Christian Academy, went to states 3 times, lead the team to a 3rd place finish</li>
+        <li>Played college tennis for Florida Institute of Technology, played 4 singles and 2 doubles</li>
+        <li>After a year, I realized that a) I'm bad at physics and b) I didn't want to be a mechanical engineer</li>
+        <li>Small fact, I've been a student at 4 different colleges (FSCJ, FIT, Flagler, UCF) and changed my major numerous times</li>
+        <li>This all bit me in the butt, and in 2013 had to stop attending UCF because I had no way to pay for it</li>
+        <li>Moved back home and hit a low point. Became a CNA and worked at an assisted living in 2015.</li>
+        <li>Got a job at Florida Hospital and moved back to Orlando</li>
+        <li>In 2017, got accepted into UCF Health Service Administration program</li>
+        <li>Started learning how to code in the Fall of '17</li>
+        <li>Now I'm showing off what I learned with a personal site</li>
+      </ul>
+    </div>
+  </div>
+  <div class="ui container" id="two">
+    <div class="ui raised segment">
+      <h2 class="ui header">Technologies<br>Used</h2>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Node.js</li>
+        <li>Express.js</li>
+        <li>MongoDB</li>
+      </ul>
+      <h2>Frameworks I'm learning</h2>
+      <ul>
+        <li>Vue JS</li>
+      </ul>
+    </div>
+  </div>
    
  
 </main>
