--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+	<meta name="viewpoint" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 	<title>Richard Shelton Personal Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/landing.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/landing.css">
 </head>
-<body class="text-cover">
-	<div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-		<header class="masthead mb-auto">
-			<div class="inner">
-				<h3 class="masthead-brand">Richard Shelton</span>
-					<nav class="nav nav-masthead justify-content-center float-right">
-						<a class="nav-link active" href="/landing" method="GET">Home</a>
-						<a class="nav-link" href="/contact" method="GET">Contact</a>
-						<a class="nav-link" href="/about" method="GET">About Me</a>
-					</nav>
-				</h3>
+<body>
+	<header>
+		<div class="ui fixed inverted pointing menu" id="head">
+			<div class="ui container">
+				<a href="/landing" method="GET" class="outline active item">Home</a>
+				<a href="/index" method="GET" class="outline">Projects</a>
+				<div class="right menu">
+					<a href="/about" method="GET" class="outline">About</a>
+					<a href="/contact" method="GET" class="outline">Contact</a>
+				</div>
 			</div>
-		</header>
+		</div>
+	</header>	
+				
