--- a/views/partials/header3.ejs
+++ b/views/partials/header3.ejs
@@ -1,32 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+	<meta name="viewpoint" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 	<title>Richard Shelton Personal Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/contact.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/components/button.min.css">
-	
-	
+	<link rel="stylesheet" type="text/css" href="/stylesheets/contact.css">
 </head>
-<body class="text-cover">
-	<nav class="navbar navbar-expand-lg navbar-inverse bg-inverse">
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo" aria-controls="navbarTogglerDemo" aira-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navabarTogglerDemo">
-			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-				<li class="nav-item">
-					<a class="nav-link" href="/landing" method="GET">Home</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/about" method="GET">About</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/index" method="GET">Projects</a>
-				</li>
-			</ul>
+	
+<body>
+	<header>
+		<div class="ui fixed inverted pointing menu" id="head">
+			<div class="ui container">
+				<a href="/landing" method="GET" class="outline">Home</a>
+				<a href="/index" method="GET" class="outline">Projects</a>
+				<div class="right menu">
+					<a href="/about" method="GET" class="outline">About</a>
+					<a href="/contact" method="GET" class="outline active item">Contact</a>
+				</div>
+			</div>
 		</div>
-	</nav>
+	</header>
 			
